# CHLU

./: .gitignore  README.md  pyproject.toml  run_experiments.py
chlu/: __init__.py  __main__.py  chlu.py  config.py  project.py
chlu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chlu/cli/: __init__.py  data_cmd.py  experiment_cmd.py  project_cmd.py  train_cmd.py  utils_cmd.py
chlu/core/: __init__.py  baselines.py  chlu_unit.py  integrators.py  potentials.py  regularization.py
chlu/data/: __init__.py  figure8.py  mnist.py  sine_waves.py
chlu/experiments/: __init__.py  exp_a_stability.py  exp_b_noise.py  exp_c_dreaming.py
chlu/training/: __init__.py  losses.py  replay_buffer.py  train.py  train_baselines.py  train_generative.py
chlu/utils/: __init__.py  checkpoints.py  metrics.py  plotting.py
docs/: CLI_GUIDE.md  README.md  code_plan.md  plan-chluImplementation.md
projects/: .gitkeep  README.md
tests/: __init__.py  test_chlu.py  test_core.py  test_data.py
