[project]
name = "chlu"
version = "0.1.8"
description = "Causal Hamiltonian Learning Unit"
authors = [{ name = "Pratik Jawahar" }]
requires-python = ">=3.10, <3.13"
readme = "README.md"

dependencies = [
    "numpy",
    "scipy",
    "jax",
    "jaxlib",
    "equinox",
    "optax",
    "diffrax",
    "matplotlib",
    "tqdm",
    "rich",
    "art",
    "scikit-learn",
    "pyyaml",
]

[project.scripts]
chlu = "chlu.chlu:main"

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "pylint>=3.3.4,<4",
    "wrapt>=1.17.2,<2",
    "sphinx>=8.1.3,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.13",
]

test = ["pytest>=8.0.0,<9", "pytest-cov>=5.0.0,<6", "pytest-xdist>=3.5.0,<4"]

[tool.ruff.lint]
extend-select = ["B"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=chlu --cov-report=xml --cov-report=term"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["chlu", "chlu.core", "chlu.training", "chlu.data", "chlu.experiments", "chlu.utils", "chlu.cli"]
